Exe: Fix yaml dependency for installer - and fast postpro

--- a/installer.cfg
+++ b/installer.cfg
@@ -36,6 +36,7 @@ pypi_wheels =
      packaging==21.2
      fatpack==0.7.3
      xarray==2023.2.0
+     pyyaml==6.0.2
 
 #      numpy==1.19.3
 #      wxPython==4.0.3
